<resources>
    <string name="app_name">Task11</string>
    <string name="browser">Браузер</string>
    <string name="mediaPlayer_str">Музыкальный проигрыватель</string>
    <string name="notify_str">Уведомления</string>
    <string name="animation_str">Анимация</string>
    <string name="search">Поиск</string>
    <string name="https_example_com">https://example.com/</string>
    <string name="pause">Пауза</string>
    <string name="play">Запуск</string>
    <string name="delay_notify">Отправить отложенное уведомление</string>
    <string name="notify">Отправить уведомление</string>
    <string name="channel_name">Название канала</string>
    <string name="channel_description">Описание канала</string>
</resources>